--- a/styles.css
+++ b/styles.css
@@ -93,8 +93,8 @@ body {
 #currentTimeDisplay,
 #currentZoomDisplay {
     font-size: 12px;
-    color: #ffffff;
-    background: #505050;
+    color: #aaaaaa;
+    background: #353535;
     padding: 4px 8px;
     border-radius: 4px;
     min-width: 40px;
